<?xml version="1.0"?>
<package format="3">
  <name>assignment-ros2-c-subscriber-node-meghanamodiyam-oss</name>
  <version>0.0.0</version>
  <description>ROS2 C++ Subscriber Assignment</description>

  <maintainer email="meghana@example.com">Meghana</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
